--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -58,6 +58,11 @@ header{
 .scroll__down{
     display: none;
 }
+.me > img{
+   
+margin-right: 0px;
+    
+}
 }
 .header__socials{
     display: flex;
